# ambgeo-lotepro

./: .dockerignore  .env.example  .gitflow  .gitignore  ANALISE_SISTEMA.md  CONTRIBUTING.md  Dockerfile  FASE2_DESIGN.md  README.md  TODO - Ambgeo.md  alembic.ini  compose.yml  espec.md  prompt 2.txt  pyproject.toml  render.yaml  requirements.txt  start.bat
.claude/: launch.json
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  database.py  main.py  models.py
app/api/: routes.py
app/core/: ai.py  analysis.py  auth.py  bolhas.py  citywide.py  dem.py  detect.py  enrich.py  geo.py  gob.py  io.py  jobs.py  layout.py  msbuildings.py  osm.py  overture.py  pipeline.py  registry.py  report.py  score.py  store.py
app/providers/: __init__.py  base.py  footprint.py  gee.py
app/static/: app.css  app.js  index.html
data/samples/: aoi.geojson  buildings.geojson  zoning.geojson
docs/: ARQUITETURA.md  PESQUISA.md  REQUISITOS.md
scripts/: make_sample.py  probe_registry.py  probe_registry2.py  probe_registry3.py  smoke_e2e.py  smoke_v2.py
tests/: test_bolhas.py  test_detect_filters.py  test_detection.py  test_layout.py  test_score.py
